[package]
name = "bevy_egui_a11y"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_egui = "0.4"

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui" }