[package]
name = "bevy_egui_a11y"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_egui = "0.10"
bevy_tts = { git = "https://github.com/lightsoutgames/bevy_tts" }
difference = "2"
egui = { version = "0.16", features = ["multi_threaded"] }